FIX Hide the scrollbar in case the content is biger than 100vh

--- a/src/app/modules/layout/layout.component.scss
+++ b/src/app/modules/layout/layout.component.scss
@@ -12,4 +12,6 @@
 main {
   max-width: 694px;
   min-width: 300px;
+
+  scrollbar-width: none;
 }
